# advent-of-code-exercises

./: .gitignore  README.md  pyproject.toml
advent_of_code_exercises/: advent_of_code_2024_1.py  advent_of_code_2024_19.py  colors.py
