[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["advent_of_code_exercises"]

[project]
name = 'advent_of_code_exercises'
description = 'Challenges 1 and 19 of Advent of Code 2024'
authors = [
    {name = 'Cam Ratchford', email = 'camratchford@gmail.com'},
]

version = "0.0.1"
requires-python = '>=3.7'


[project.scripts]
day1 = "advent_of_code_exercises.advent_of_code_2024_1:run_exercise_1"
day19 = "advent_of_code_exercises.advent_of_code_2024_19:run_exercise_19"
draw-towels = "advent_of_code_exercises.advent_of_code_2024_19:draw_towels"
